tests/invariants/fail/ethEnv.act
constructor of This
interface constructor()

creates

    address this := THIS
    uint value := CALLVALUE
    uint depth := CALLDEPTH
    address origin := ORIGIN
    bytes32 hash := BLOCKHASH
    uint number := BLOCKNUMBER
    uint difficulty := DIFFICULTY
    uint chainid := CHAINID
    uint gaslimit := GASLIMIT
    address coinbase := COINBASE
    uint timestamp := TIMESTAMP
    uint nonce := NONCE

invariants

    this == THIS
    value == CALLVALUE
    depth == CALLDEPTH
    hash == BLOCKHASH
    number == BLOCKNUMBER
    difficulty == DIFFICULTY
    chainid == CHAINID
    gaslimit == GASLIMIT
    coinbase == COINBASE
    timestamp == TIMESTAMP
    nonce == NONCE

behaviour break of This
interface break()

storage

    this => 1
    value => 1
    depth => 1
    number => 1
    difficulty => 1
    chainid => 1
    gaslimit => 1
    coinbase => 1
    timestamp => 1
    nonce => 1
    hash => 1
